fix modal popup scaling on shrink of viewport, change  modal content layout, remove z-index from navbar

--- a/src/components/modal/Modal.css
+++ b/src/components/modal/Modal.css
@@ -1,46 +1,63 @@
+
+
 .Background {
   background: rgba(102, 112, 133, 0.25);
   backdrop-filter: blur(2px);
   width: 100vw;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  /* transform: translate(-50%, -50%); */
+  
 }
 
 .ModalWrapper{
-  width: 80vw;
-  height: 70vh;
+  width: 80%;
+  height: 70%;
   box-shadow: 0 5px 16px rgba(0, 0, 0, 0.2);
   background: #FFDBA4;
-  color: #000;
   display: flex;  
-  z-index: 10;
   border-radius:20px;
-  position: relative;
-  justify-content: center;
+  position: fixed;
+  left: 50%;
+  top:50%;
+  transform: translate(-50%, -50%);
+  overflow-x: hidden;
+  overflow-y: auto;
+  
 }
 
+
+
 .recipe-image {
-  max-width: 50%;
+  width: 50%;
   border-radius: 20px 0 0 20px;
-  background: #FFDBA4;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+
+  
+  
 }
 
 .recipe-image img {
-  max-width: 100%;
-  
+  width: 60%;
+  height: 40%;
+  object-fit: cover;
 
-  border-radius: 50px;
+border-radius: 20px;
+box-shadow: 5px 5px 20px 5px rgb(46, 45, 45);
+}
+
+.recipe-image p {
+font-family: 'Montserrat';
+font-style: normal;
+font-weight: 400;
+font-size: 1.8rem;
+line-height: 25px;
+margin: 25px;
 }
 
 .ModalContent {
@@ -51,14 +68,22 @@
   line-height: 1.8;
   color: #141414;
   width: 50%;
+  
+  margin-right: 10px;
 }
 
 .ModalContent h2 {
-  margin: 10px 50px 20px;
+  margin: 30px 0px 20px 0px;
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 3rem;
+  line-height: 78px;
+  
   }
 
 .CloseModalButton {
-  cursor: pointer;
+  
   position: absolute;
   top: 20px;
   right: 20px;
@@ -66,10 +91,20 @@
   height: 32px;
   padding: 0;
   z-index: 10;
+  transition: 300ms ease-in-out;
+}
+
+.CloseModalButton:hover {
+  cursor: pointer;
+  transform: scale(135%);
+}
+
+.EmailIcon:hover{
+  cursor: pointer;
 }
 
 .EmailIcon{
-  cursor: pointer;
+  
   position: absolute;
   bottom: 20px;
   right: 20px;
@@ -79,26 +114,93 @@
   z-index: 10;
 }
 
-.RecipeIngList{
+
+
+.cookingTime, .recipe-image h1
+{
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 3rem;
+ 
+}
+
+.recipe-image h1{
+  margin: 0;
+  margin-top: 35px;
+  padding-bottom: 35px;
+  text-align: center;
+}
+
+.cookingTime {
+  margin-top: 35px;
+}
+
+.ingredientsContainer {
+  display: flex;
+flex-direction: column;
+flex-wrap: wrap;
+width: 100%;
+
+
+border-bottom: #101828 1px solid;
+padding: 0px 50px 35px 50px;
+
+
+
+}
+
+.instructionsContainer {
+  width: 100%;
+  padding: 35px 50px 10px 50px;  
+  min-height: 30%;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+.instructionsContainer ul, .ingredientsContainer ul {
   list-style: none;
 }
 
-.cookingTime
-{
-  
-}
+
+
+
 
 @media screen and (max-width:1050px){
   
   .ModalWrapper{
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    min-height: 90%;
+    padding: 20px;
+    
   }
 
-  .ModalWrapper img {
-   
+  .ModalContent {
+    margin-right: 0px ;
+    align-content: flex-start;
   }
+
+  .ModalContent h2 {
+    margin-top: 0px ;
+    
+  }
+
+  .recipe-image {
+   
+    width: 100%;
+    flex-direction: column;
+    justify-content:center;
+    
+    
+  }
+
+  
+
+  .recipe-image h1 {
+    margin-top: 0;
+  }
+
+  
 
   .ModalContent {
     width: 100%;
